<package>
  <name>c3_hlac</name>
  <description>
     C3-HLAC feature extraction from RGB point cloud.
  </description>
  <author>Asako Kanezaki</author>
  <maintainer email="foo@bar.com">Asako Kanezaki</maintainer>
  <version>0.0.0</version>
  <license>BSD</license>
  <url>http://ros.org/wiki/c3_hlac</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>c3_hlac_core</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>c3_hlac_core</run_depend>
  <run_depend>pcl_ros</run_depend>
  
</package>
