<package>
  <name>c3_hlac_core</name>
  <version>0.0.0</version>
  <maintainer email="foo@bar.com">Kanezaki Asako</maintainer>
  <author>Kanezaki Asako</author>
  <description>
     ROS wrapper for core functions in C3-HLAC feature extraction.
  </description>
  
  <license>BSD(non-commercial use)</license>
  <url>http://ros.org/wiki/c3_hlac_core</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>mk</build_depend>
  <run_depend>roscpp</run_depend>
  
</package>


